# faust-egui

./: Cargo.toml  README.md
dsp/: instrument.dsp
src/: main.rs  ui.rs
